tests/golden/fixtures/syntax-addrmode-indirect-err/expected.err
Error: `lda (addr)` requires the address to lie within the direct page
   ╭─[ tests/golden/fixtures/syntax-addrmode-indirect-err/input.k65:2:5 ]
   │
 2 │     lda (shell_str_ptr)
   │     ─────────┬─────────  
   │              ╰─────────── indirect operand
   │ 
   │ Help: symbol `shell_str_ptr` is not declared in this file; declare it as a zero-page `var` (e.g. `var shell_str_ptr = $80`), or use the `dp` prefix to force direct-page indirect (`(dp shell_str_ptr)`)
   │ 
   │ Note: `lda` has no `(abs)` form on the W65C816 — only `jmp`, `jsl`, and `jsr` accept absolute-indirect addressing
───╯
